--- a/index.html
+++ b/index.html
@@ -987,41 +987,114 @@ loadTabButton.addEventListener('click', () => {
   spaceTabButton.classList.remove('active');
 });
 
-document.getElementById('auto-wiring-button').addEventListener('click', autoWire);
-
-function autoWire() {
+// Auto Wire Logic (Red Wires)
+document.getElementById('auto-wiring-button').addEventListener('click', () => {
   const parts = document.querySelectorAll('.part'); // Get all parts
   const redDots = [];
-  const blackDots = [];
 
-  // Step 1: Identify all red and black dots, their positions, and their space names
+  // Step 1: Identify all red dots
   parts.forEach((part) => {
     const partRect = part.getBoundingClientRect();
     const dots = part.querySelectorAll('.dot');
-    const spaceName = part.querySelector('.space-name')?.textContent || 'Unnamed'; // Get the space name
 
     dots.forEach((dot) => {
-      const dotRect = dot.getBoundingClientRect();
-      const dotData = {
-        part,
-        dot,
-        x: dotRect.left + dotRect.width / 2 - partRect.left + part.offsetLeft,
-        y: dotRect.top + dotRect.height / 2 - partRect.top + part.offsetTop,
-        spaceName, // Add the space name to the dot
-      };
-
       if (dot.style.backgroundColor === 'red') {
-        redDots.push(dotData); // Add to red dots
-      } else if (dot.style.backgroundColor === 'black') {
-        blackDots.push(dotData); // Add to black dots
+        const dotRect = dot.getBoundingClientRect();
+        redDots.push({
+          part,
+          dot,
+          x: dotRect.left + dotRect.width / 2 - partRect.left + part.offsetLeft,
+          y: dotRect.top + dotRect.height / 2 - partRect.top + part.offsetTop,
+        });
       }
     });
   });
 
-  // Step 2: Wire red dots (with space name restrictions)
+  // Step 2: Wire red dots
   wireDots(redDots, 'red', true);
+});
 
-  // Step 3: Wire black dots (without space name restrictions)
+// Auto Wire Zumnets Logic (Black Wires)
+let selectedZumnets = [];
+let lastTappedZumnet = null;
+let tapTimeout = null;
+
+document.getElementById('auto-wire-zumnets-button').addEventListener('click', () => {
+  const parts = document.querySelectorAll('.part'); // Get all parts
+
+  if (selectedZumnets.length === 0) {
+    // First click: Select Zumnets
+    parts.forEach((part) => {
+      if (part.textContent.startsWith('ZUMNET')) {
+        part.style.border = '2px solid blue'; // Highlight selected Zumnets
+        selectedZumnets.push(part);
+
+        // Add double-click or single-tap to unselect
+        part.addEventListener('dblclick', () => unselectZumnet(part)); // For mouse
+        part.addEventListener('touchstart', () => handleTap(part)); // For touch screens
+      }
+    });
+    alert('Zumnets selected. Click the "Auto Wire Zumnets" button again to wire them. Double-click or tap a Zumnet to unselect it.');
+  } else {
+    // Second click: Wire selected Zumnets with black wires
+    wireSelectedZumnets(selectedZumnets);
+
+    // Clear selection after wiring
+    selectedZumnets.forEach((part) => {
+      part.style.border = ''; // Remove highlight
+      part.removeEventListener('dblclick', () => unselectZumnet(part)); // Remove the double-click listener
+      part.removeEventListener('touchstart', () => handleTap(part)); // Remove the touch listener
+    });
+    selectedZumnets = []; // Reset selection
+  }
+});
+
+// Function to handle single-tap on touch screens
+function handleTap(part) {
+  if (tapTimeout && lastTappedZumnet === part) {
+    // If the same Zumnet is tapped again within the timeout, unselect it
+    clearTimeout(tapTimeout);
+    tapTimeout = null;
+    unselectZumnet(part);
+  } else {
+    // Set a timeout to detect a single tap
+    lastTappedZumnet = part;
+    tapTimeout = setTimeout(() => {
+      tapTimeout = null;
+    }, 300); // 300ms timeout for double-tap detection
+  }
+}
+
+// Function to unselect a Zumnet
+function unselectZumnet(part) {
+  part.style.border = ''; // Remove highlight
+  selectedZumnets = selectedZumnets.filter((selectedPart) => selectedPart !== part); // Remove from selectedZumnets
+  part.removeEventListener('dblclick', () => unselectZumnet(part)); // Remove the double-click listener
+  part.removeEventListener('touchstart', () => handleTap(part)); // Remove the touch listener
+}
+
+function wireSelectedZumnets(zumnets) {
+  const blackDots = [];
+
+  // Step 1: Identify all black dots in the selected Zumnets
+  zumnets.forEach((part) => {
+    const partRect = part.getBoundingClientRect();
+    const dots = part.querySelectorAll('.dot');
+
+    dots.forEach((dot) => {
+      if (dot.style.backgroundColor === 'black') {
+        const dotRect = dot.getBoundingClientRect();
+        blackDots.push({
+          part,
+          dot,
+          x: dotRect.left + dotRect.width / 2 - partRect.left + part.offsetLeft,
+          y: dotRect.top + dotRect.height / 2 - partRect.top + part.offsetTop,
+        });
+      }
+    });
+  });
+
+  // Step 2: Wire black dots
   wireDots(blackDots, 'black', false);
 }
 
@@ -1117,67 +1190,7 @@ function drawWire(path, color) {
   wiringSvg.appendChild(polyline);
 }
 
-// Auto Wire Zumnets Logic
-// Auto Wire Zumnets Logic
-let selectedZumnets = [];
 
-document.getElementById('auto-wire-zumnets-button').addEventListener('click', () => {
-  const parts = document.querySelectorAll('.part'); // Get all parts
-
-  if (selectedZumnets.length === 0) {
-    // First click: Select Zumnets
-    parts.forEach((part) => {
-      if (part.textContent.startsWith('ZUMNET')) {
-        part.style.border = '2px solid blue'; // Highlight selected Zumnets
-        selectedZumnets.push(part);
-
-        // Add double-click to unselect
-        part.addEventListener('dblclick', () => unselectZumnet(part));
-      }
-    });
-    alert('Zumnets selected. Click the button again to wire them. Double-click a Zumnet to unselect it.');
-  } else {
-    // Second click: Wire selected Zumnets
-    wireSelectedZumnets(selectedZumnets);
-    selectedZumnets.forEach((part) => {
-      part.style.border = ''; // Remove highlight
-      part.removeEventListener('dblclick', () => unselectZumnet(part)); // Remove the double-click listener
-    });
-    selectedZumnets = []; // Reset selection
-  }
-});
-
-// Function to unselect a Zumnet
-function unselectZumnet(part) {
-  part.style.border = ''; // Remove highlight
-  selectedZumnets = selectedZumnets.filter((selectedPart) => selectedPart !== part); // Remove from selectedZumnets
-  part.removeEventListener('dblclick', () => unselectZumnet(part)); // Remove the double-click listener
-}
-
-function wireSelectedZumnets(zumnets) {
-  const blackDots = [];
-
-  // Step 1: Identify all black dots in the selected Zumnets
-  zumnets.forEach((part) => {
-    const partRect = part.getBoundingClientRect();
-    const dots = part.querySelectorAll('.dot');
-
-    dots.forEach((dot) => {
-      if (dot.style.backgroundColor === 'black') {
-        const dotRect = dot.getBoundingClientRect();
-        blackDots.push({
-          part,
-          dot,
-          x: dotRect.left + dotRect.width / 2 - partRect.left + part.offsetLeft,
-          y: dotRect.top + dotRect.height / 2 - partRect.top + part.offsetTop,
-        });
-      }
-    });
-  });
-
-  // Step 2: Wire black dots
-  wireDots(blackDots, 'black', false);
-}
 // Wire Drawing Logic
 const wiringSvg = document.getElementById('wiring-svg');
 const wirePopup = document.getElementById('wire-popup');
